--- a/software.bib
+++ b/software.bib
@@ -15,6 +15,22 @@
   url = {https://here.r-lib.org/},
 }
 
+@Manual{R-margins,
+  title = {margins: Marginal Effects for Model Objects},
+  author = {Thomas J. Leeper},
+  year = {2024},
+  note = {R package version 0.3.28},
+  url = {https://github.com/bbolker/margins},
+}
+
+@Manual{R-sf,
+  title = {sf: Simple Features for R},
+  author = {Edzer Pebesma},
+  year = {2025},
+  note = {R package version 1.0-20},
+  url = {https://r-spatial.github.io/sf/},
+}
+
 @Manual{R-tidycensus,
   title = {tidycensus: Load US Census Boundary and Attribute Data as tidyverse and
 sf-Ready Data Frames},
@@ -30,6 +46,35 @@ sf-Ready Data Frames},
   year = {2023},
   note = {R package version 2.0.0},
   url = {https://tidyverse.tidyverse.org},
+}
+
+@Manual{R-tigris,
+  title = {tigris: Load Census TIGER/Line Shapefiles},
+  author = {Kyle Walker},
+  year = {2024},
+  note = {R package version 2.1},
+  url = {https://github.com/walkerke/tigris},
+}
+
+@Book{sf2023,
+  author = {Edzer Pebesma and Roger Bivand},
+  title = {{Spatial Data Science: With applications in R}},
+  year = {2023},
+  publisher = {{Chapman and Hall/CRC}},
+  url = {https://r-spatial.org/book/},
+  doi = {10.1201/9780429459016},
+}
+
+@Article{sf2018,
+  author = {Edzer Pebesma},
+  title = {{Simple Features for R: Standardized Support for Spatial Vector Data}},
+  year = {2018},
+  journal = {{The R Journal}},
+  doi = {10.32614/RJ-2018-009},
+  url = {https://doi.org/10.32614/RJ-2018-009},
+  pages = {439--446},
+  volume = {10},
+  number = {1},
 }
 
 @Article{tidyverse2019,
